init/raymii-mosquitto_traefik/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: raymii-mosquitto-dev-mqtt
  namespace: raymii-mosquitto-dev
spec:
  entryPoints:
    - raymii-mosquitto-dev-mqtt
  routes:
    - match: HostSNI(`*`)
      services:
        - name: raymii-mosquitto-svc
          port: 1883
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: raymii-mosquitto-dev-mqtt-primary
  namespace: raymii-mosquitto-dev
spec:
  entryPoints:
    - raymii-mosquitto-dev-mqtt-primary
  routes:
    - match: HostSNI(`*`)
      services:
        - name: raymii-mosquitto-primary-svc
          port: 2883
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: raymii-mosquitto-dev-mqtt-secondary
  namespace: raymii-mosquitto-dev
spec:
  entryPoints:
    - raymii-mosquitto-dev-mqtt-secondary
  routes:
    - match: HostSNI(`*`)
      services:
        - name: raymii-mosquitto-secondary-svc
          port: 3883
